syntax = "proto3";
package triedb_repl;

import "google/protobuf/empty.proto";

service Backend {
  rpc ping (google.protobuf.Empty) returns (PingReply);
  rpc getRawBytes (GetRawBytesRequest) returns (GetRawBytesReply);
  rpc getStateDiff (GetStateDiffRequest) returns (GetStateDiffReply);
  rpc getFullSubtree (FullSubtreePath) returns (GetStateDiffReply);
  rpc getBlockRange (google.protobuf.Empty) returns (GetBlockRangeReply);
}

message PingReply {
  string message = 1;
}

message Hash {
  string value = 1;
}

message GetRawBytesRequest {
  Hash hash = 1;
}

message PathElement {
  Hash hash = 1;
  bool direct = 2;
}

message FullSubtreePath {
  repeated PathElement paths = 1;
}

message GetRawBytesReply {
  bytes node = 1;
}

message GetBlockRangeReply {
  uint64 start = 1;
  uint64 end = 2;
}

message GetStateDiffRequest {
  uint64 from = 1;
  uint64 to = 2;
}

message Insert {
  Hash hash = 1;
  bytes data = 2;
}

message GetStateDiffReply {
  repeated Insert changeset = 1;
  Hash first_root = 2;
  Hash second_root = 3;
}
